# stellantis-connected-car

./: .gitignore  Cargo.toml  Readme.md
src/: apk_parser.rs  config.rs  main.rs  parser.rs
src/psa/: api.rs  model.rs
src/psa/model/: auth.rs  config.rs  connectedcar.rs
