[package]
name = "stellantis-connected-car"
version = "0.1.0"
edition = "2021"
authors = ["Sven Fabricius <sven.fabricius@livediesel.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mr-sven/stellantis-connected-car"
description = "Rust implementation of Stellantis Connected Car API"
categories = ["api-bindings"]
keywords = ["stellantis", "connected_car"]

[dependencies]
# used for config
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.9"
# used to open apk
zip = { version = "0.6", default-features = false, features = ["deflate"] }
# find properties
regex = "1.7"
# used for apk properties file
serde_json = "1.0"
# extract client certificate
openssl = "0.10"
# read apk resources
arsc = "^0.1"
# static hash maps
phf = { version = "0.11", features = ["macros"] }
# making web requests
reqwest = { version = "0.11", features = ["blocking", "json", "native-tls"] }
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
serde_with = "2.3"

[patch.crates-io]
arsc = { git = 'https://github.com/mr-sven/arsc.git' }
